--- a/templates/public_home.html
+++ b/templates/public_home.html
@@ -11,6 +11,11 @@
   <a href="{{ url_for('login') }}" class="nav-btn">Admin</a>
 </div>
 
+<div class="banner-wrapper">
+    <img src="{{ url_for('static', filename='images/bwl_banner.jpg') }}" alt="BWL Banner" class="bwl-banner">
+</div>
+
+
 <!-- Events Section -->
 <div class="events-container">
 
