hall of fame added

--- a/templates/public_home.html
+++ b/templates/public_home.html
@@ -8,6 +8,7 @@
 <div class="navbar">
   <a href="{{ url_for('public_home') }}" class="nav-btn">Home</a>
   <a href="{{ url_for('global_standings') }}" class="nav-btn">Global Standings</a>
+  <a href="{{ url_for('hall_of_fame') }}" class="nav-btn">Hall of Fame</a>
   <a href="{{ url_for('login') }}" class="nav-btn">Admin</a>
 </div>
 
