--- a/templates/base_public.html
+++ b/templates/base_public.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}My Site{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
     <style>
         body {
             background-color: black;
